# oftc-blitzed

./: .cvsignore  ChangeLog  ChangeLog.oftc  Doxyfile  INSTALL  Makefile.in  README  TODO  TODO.oftc  configure  configure.ac  getnewcl.sh  svschk
data/: Makefile.am  Makefile.in  example.conf
doc/: CodingStyle
include/: config.h  defs.h  extern.h  floodserv.h  language.h  messages.h  pseudo.h  serno.h  services.h  sysconf.h.in  version.h
mysql/: .cvsignore  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  blitzed.sql  blitzed_udf.c  conf.h.in  configure  configure.in
old-docs/: Changes  Changes.lang  FAQ  README  TODO  WhatsNew
src/: .cvsignore  Makefile.in  actions.c  akill.c  auth.c  autojoin.c  cache.c  channels.c  chanserv.c  commands.c  compat.c  config.c  cs_access.c  floodserv.c  helpserv.c  init.c  ircmacros.c  language.c  log.c  main.c  memory.c  memoserv.c  messages.c  misc.c  mysql.c  news.c  nickserv.c  operserv.c  process.c  quarantine.c  send.c  servers.c  sessions.c  sha1.c  sockutil.c  timeout.c  tools.c  users.c  vsnprintf.c
src/lang/: .cvsignore  Makefile.in  de.l  dk.l  en_us.l  es.l  index  it.l  ja_euc.l  ja_jis.l  ja_sjis.l  langcomp.c  psycho.l  pt.l  tr.l
src/utils/bulk/: README  register_chan.pl  register_nick.pl
src/utils/db2mysql/: Makefile.am  Makefile.in  akill.c  chanserv.c  db2mysql.c  db2mysql.h  exception.c  extern.h  files.c  memo.c  memory.c  mysql.c  news.c  nickserv.c  operserv.c  string.c
